add portfolio-card overlay

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Технокряк</h2>
@@ -86,6 +91,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
@@ -97,6 +107,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Ресторан Seafood</h2>
@@ -108,6 +123,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Проєкт Prime</h2>
@@ -119,6 +139,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Проєкт Boxes</h2>
@@ -130,6 +155,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Inspiration has no Borders</h2>
@@ -141,6 +171,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Видання Limited Edition</h2>
@@ -152,6 +187,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Проєкт LAB</h2>
@@ -163,6 +203,11 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                                    <div class="hover-thumb" height="294">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                            сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                                            компанію чи приватну особу.</p>
+                                    </div>
                                 </div>
                                 <div class="portfolio-content">
                                     <h2 class="portfolio-txt">Growing Business</h2>
