--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -91,7 +91,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -107,7 +107,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -123,7 +123,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -139,7 +139,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -155,7 +155,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -171,7 +171,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -187,7 +187,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
@@ -203,7 +203,7 @@
                             <a href="#" class="link hover-link">
                                 <div class="img-thumb">
                                     <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-                                    <div class="hover-thumb" height="294">
+                                    <div class="hover-thumb">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                             сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                                             компанію чи приватну особу.</p>
