--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
 
 	<div class="backdrop is-hidden" data-modal>
 		<div class="modal">
-			<div class="thumb-modal" data-modal-close>
+			<button class="thumb-modal" data-modal-close>
 				<svg class="modal-icon icon" width="11" height="11">
 					<use href="./img/sprite.svg#icon-close"></use>
 				</svg>
-			</div>
+			</button>
 		</div>
 	</div>
 
