--- a/index.html
+++ b/index.html
@@ -438,6 +438,49 @@
 					<use href="./img/sprite.svg#icon-close"></use>
 				</svg>
 			</button>
+
+			<div class="form-wrapper">
+				<h2 class="form-title">Залиште свої дані, ми вам передзвонимо</h2>
+				<form class="form">
+
+					<div class="form-field">
+						<label for="name" class="form-label">
+							Ім'я
+						</label>
+						<input type="name" name="name" id="name">
+					</div>
+
+					<div class="form-field">
+						<label for="tel" class="form-label">
+							Телефон
+						</label>
+						<input type="tel" name="tel" id="tel">
+					</div>
+
+					<div class="form-field">
+						<label for="email" class="form-label">
+							Пошта
+						</label>
+						<input type="email" name="email" id="email">
+					</div>
+
+					<div class="form-field">
+						<label for="text" class="form-label">
+							Коментар
+						</label>
+						<textarea name="text" id="text" cols="30" rows="10" class="textarea"></textarea>
+					</div>
+					<div class="form-field checkbox">
+						<input type="checkbox" name="textarea" id="box" class="form-chekbox">
+
+						<label for="box" class="form-label check">
+							Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="">Умови
+									договору</a></span>
+						</label>
+					</div>
+					<button type="submit" class="form-btn">Відправити</button>
+				</form>
+			</div>
 		</div>
 	</div>
 
