--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="join-footer">
-                    <strong class="join-title">приєднуйтесь</strong>
+                    <b class="join-title">приєднуйтесь</b>
                     <ul class="footer-social list">
                         <li class="social item-footer">
                             <a href="#" class="social-link join-link" target="_blank"
@@ -288,7 +288,17 @@
                     </ul>
 
                 </div>
+                <form class="mail-wrapper">
+                    <div class="mail-footer">
+                        <label for="mail-footer" class="mail-title">Підпишіться на розсилку</label>
+                        <input type="email" name="mail-footer" id="mail-footer" placeholder="Email" class="mail-input">
+                    </div>
+                    <button type="submit" class="mail-btn">Підписатися</button>
+
+                </form>
+
             </div>
+
         </div>
     </footer>
 
