--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 						</svg>
 
 						<label for="box" class="form-label check">
-							Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="">Умови
+							Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="#">Умови
 									договору</a></span>
 						</label>
 					</div>
