--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 							Ім'я
 						</label>
 						<div class="input-wrapper">
-							<input type="name" name="name" id="name" class="name-form input">
+							<input type="text" name="name" id="name" class="name-form input">
 							<svg class="name-svg" width="12" height="12">
 								<use href="./img/sprite2.svg#icon-nameform"></use>
 							</svg>
