--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
 						<label for="text" class="form-label">
 							Коментар
 						</label>
-						<textarea name="text" id="text" cols="30" rows="10" class="textarea"></textarea>
+						<textarea name="text" id="text" cols="30" rows="10" class="textarea"
+							placeholder="Введіть текст"></textarea>
 					</div>
 					<div class="form-field checkbox">
 						<input type="checkbox" name="textarea" id="box" class="form-chekbox">
