--- a/index.html
+++ b/index.html
@@ -496,17 +496,18 @@
 						<textarea name="text" id="text" cols="30" rows="10" class="textarea"
 							placeholder="Введіть текст"></textarea>
 					</div>
-					<div class="form-field checkbox">
+					<!-- <div class="form-field checkbox"> -->
+					<label for="box" class="form-label check">
 						<input type="checkbox" name="textarea" id="box" class="form-chekbox">
 						<svg class="check-svg icon">
 							<use href="./img/sprite2.svg#icon-check"></use>
 						</svg>
 
-						<label for="box" class="form-label check">
-							Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="#">Умови
-									договору</a></span>
-						</label>
-					</div>
+
+						Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="#">Умови
+								договору</a></span>
+					</label>
+					<!-- </div> -->
 					<button type="submit" class="form-btn">Відправити</button>
 				</div>
 			</form>
