--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
 	<!--Шапка сайта-->
 	<header class="header">
-		<div class="header-wrapper container">
-			<nav class="header-nav">
-				<a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
-				<ul class="header-list list">
-					<li class="header-item"><a class="header-link link current" href="./index.html">Студія</a></li>
-					<li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
-					<li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
+		<div class="header__wrapper container">
+			<nav class="header__nav">
+				<a href="./index.html" class="header__logo link"><span>Web</span>Studio</a>
+				<ul class="header__list list">
+					<li class="header__item"><a class="header__link link current" href="./index.html">Студія</a></li>
+					<li class="header__item"><a class="header__link link" href="./portfolio.html">Портфоліо</a></li>
+					<li class="header__item"><a class="header__link link" href="#">Контакти</a></li>
 				</ul>
 			</nav>
 
-			<ul class="adress-nav list">
+			<ul class="adress__nav list">
 				<li class="adress-item">
 					<a href="mailto:info@devstudio.com" class="adress-link link">
 						<svg class="icon-post icon-adress">
