ready BEM refactoring

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			<nav class="header__nav">
 				<a href="./index.html" class="header__logo link"><span class="header__span">Web</span>Studio</a>
 				<ul class="header__list list">
-					<li class="header__item"><a class="header__link link current" href="./index.html">Студія</a></li>
+					<li class="header__item"><a class="header__link link header__link--current"
+							href="./index.html">Студія</a></li>
 					<li class="header__item"><a class="header__link link" href="./portfolio.html">Портфоліо</a></li>
 					<li class="header__item"><a class="header__link link" href="#">Контакти</a></li>
 				</ul>
@@ -121,7 +122,7 @@
 		</section>
 
 		<!-- Чем занимаемся -->
-		<section class="section made">
+		<section class="section section-made">
 			<div class="container">
 				<h2 class="section__title">Чим ми займаємося</h2>
 				<ul class="made__list list">
@@ -159,21 +160,21 @@
 						<p class="team__subtxt">Product Designer</p>
 						<ul class="team-social__list list">
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__instagram icon" width="20" height="20">
 										<use href="./img/sprite.svg#icon-instagram"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__twitter icon" width="16.25" height="16.25px">
 										<use href="./img/sprite.svg#icon-twitter"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__facebook icon" width="10" height="
 										20px">
 										<use href="./img/sprite.svg#icon-facebook"></use>
@@ -181,7 +182,7 @@
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__linkedin icon" width="20" height="20px">
 										<use href="./img/sprite.svg#icon-linkedin"></use>
 									</svg>
@@ -196,21 +197,21 @@
 						<p class="team__subtxt">Frontend Developer</p>
 						<ul class="team-social__list  list">
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__instagram icon" width="20" height="20">
 										<use href="./img/sprite.svg#icon-instagram"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__twitter icon" width="16.25" height="16.25px">
 										<use href="./img/sprite.svg#icon-twitter"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__facebook icon" width="10" height="
 										20px">
 										<use href="./img/sprite.svg#icon-facebook"></use>
@@ -218,7 +219,7 @@
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__linkedin icon" width="20" height="20px">
 										<use href="./img/sprite.svg#icon-linkedin"></use>
 									</svg>
@@ -233,21 +234,21 @@
 						<p class="team__subtxt">Marketing</p>
 						<ul class="team-social__list  list">
 							<li class="social">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__instagram icon" width="20" height="20">
 										<use href="./img/sprite.svg#icon-instagram"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__twitter icon" width="16.25" height="16.25px">
 										<use href="./img/sprite.svg#icon-twitter"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__facebook icon" width="10" height="
 										20px">
 										<use href="./img/sprite.svg#icon-facebook"></use>
@@ -255,7 +256,7 @@
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__linkedin icon" width="20" height="20px">
 										<use href="./img/sprite.svg#icon-linkedin"></use>
 									</svg>
@@ -270,21 +271,21 @@
 						<p class="team__subtxt">UI Designer</p>
 						<ul class="team-social__list  list">
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__instagram icon" width="20" height="20">
 										<use href="./img/sprite.svg#icon-instagram"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__twitter icon" width="16.25" height="16.25px">
 										<use href="./img/sprite.svg#icon-twitter"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__facebook icon" width="10" height="
 										20px">
 										<use href="./img/sprite.svg#icon-facebook"></use>
@@ -292,7 +293,7 @@
 								</a>
 							</li>
 							<li class="team-social__item">
-								<a href="#" class="social__link" target="_blank" rel="noreferrer noopener nofollow">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
 									<svg class="icon__linkedin icon" width="20" height="20px">
 										<use href="./img/sprite.svg#icon-linkedin"></use>
 									</svg>
@@ -369,7 +370,7 @@
 		<div class="container">
 			<div class="footer__wrapper">
 				<div class="footer__adress">
-					<a href="./index.html" class="footer__logo link"><span>Web</span>Studio</a>
+					<a href="./index.html" class="footer__logo link"><span class="footer__span">Web</span>Studio</a>
 
 					<!-- Адрес -->
 					<address>
@@ -393,26 +394,26 @@
 				</div>
 
 				<div class="join-footer">
-					<b class="join-title">приєднуйтесь</b>
-					<ul class="footer-social list">
-						<li class="social item-footer">
-							<a href="#" class="social-link join-link" target="_blank"
+					<b class="join-footer__title">приєднуйтесь</b>
+					<ul class="join-footer__social list">
+						<li class="join-footer__item">
+							<a href="#" class="social-link join-footer__link" target="_blank"
 								rel="noreferrer noopener nofollow">
 								<svg class="icon-instagram icon" width="20" height="20">
 									<use href="./img/sprite.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="social item-footer">
-							<a href="#" class="social-link join-link" target="_blank"
+						<li class="join-footer__item ">
+							<a href="#" class="social-link join-footer__link" target="_blank"
 								rel="noreferrer noopener nofollow">
 								<svg class="icon-twitter icon" width="16.25" height="16.25px">
 									<use href="./img/sprite.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="social item-footer">
-							<a href="#" class="social-link join-link" target="_blank"
+						<li class="join-footer__item ">
+							<a href="#" class="social-link join-footer__link" target="_blank"
 								rel="noreferrer noopener nofollow">
 								<svg class="icon-facebook icon" width="10" height="
 								20px">
@@ -420,8 +421,8 @@
 								</svg>
 							</a>
 						</li>
-						<li class="social item-footer">
-							<a href="#" class="social-link join-link" target="_blank"
+						<li class="join-footer__item">
+							<a href="#" class="social-link join-footer__link" target="_blank"
 								rel="noreferrer noopener nofollow">
 								<svg class="icon-linkedin icon" width="20" height="20px">
 									<use href="./img/sprite.svg#icon-linkedin"></use>
@@ -432,11 +433,12 @@
 
 				</div>
 				<form class="mail-wrapper">
-					<div class="mail-footer">
-						<label for="mail-footer" class="mail-title">Підпишіться на розсилку</label>
-						<input type="email" name="mail-footer" id="mail-footer" placeholder="Email" class="mail-input">
+					<div class="mail-wrapper__footer">
+						<label for="mail-footer" class="mail-wrapper__title">Підпишіться на розсилку</label>
+						<input type="email" name="mail-footer" id="mail-footer" placeholder="Email"
+							class="mail-wrapper__input">
 					</div>
-					<button type="submit" class="mail-btn">Підписатися</button>
+					<button type="submit" class="mail-wrapper__btn">Підписатися</button>
 
 				</form>
 
@@ -447,72 +449,72 @@
 
 	<!-- Модальное окно -->
 
-	<div class="backdrop is-hidden" data-modal>
-		<div class="modal">
-			<button class="thumb-modal" data-modal-close>
+	<div class="backdrop backdrop--is-hidden" data-modal>
+		<div class="backdrop__modal--is-hidden">
+			<button class="backdrop__btn" data-modal-close>
 				<svg class="modal-icon icon" width="11" height="11">
 					<use href="./img/sprite.svg#icon-close"></use>
 				</svg>
 			</button>
 
-
-			<h2 class="form-title">Залиште свої дані, ми вам передзвонимо</h2>
+			<h2 class="backdrop__title">Залиште свої дані, ми вам передзвонимо</h2>
 			<form class="form">
-				<div class="form-wrapper">
-					<div class="form-field">
-						<label for="name" class="form-label">
+				<div class="form__wrapper">
+					<div class="form__field">
+						<label for="name" class="form__label">
 							Ім'я
 						</label>
-						<div class="input-wrapper">
-							<input type="text" name="name" id="name" class="name-form input">
-							<svg class="name-svg" width="12" height="12">
+						<div class="form__input">
+							<input type="text" name="name" id="name" class="form__name input">
+							<svg class="form__name-svg" width="12" height="12">
 								<use href="./img/sprite2.svg#icon-nameform"></use>
 							</svg>
 						</div>
 					</div>
 
-					<div class="form-field">
-						<label for="tel" class="form-label">
+					<div class="form__field">
+						<label for="tel" class="form__label">
 							Телефон
 						</label>
-						<div class="input-wrapper">
-							<input type="tel" name="tel" id="tel" class="name-form input">
-							<svg class="name-svg" width="13" height="13">
+						<div class="form__input">
+							<input type="tel" name="tel" id="tel" class="form__name input">
+							<svg class="form__name-svg" width="13" height="13">
 								<use href="./img/sprite2.svg#icon-telefonform"></use>
 							</svg>
 						</div>
 					</div>
 
-					<div class="form-field">
-						<label for="email" class="form-label">
+					<div class="form__field">
+						<label for="email" class="form__label">
 							Пошта
 						</label>
-						<div class="input-wrapper">
-							<input type="email" name="email" id="email" class="name-form input">
-							<svg class="name-svg" width="15" height="12">
+						<div class="form__input">
+							<input type="email" name="email" id="email" class="form__name input">
+							<svg class="form__name-svg" width="15" height="12">
 								<use href="./img/sprite2.svg#icon-mailform"></use>
 							</svg>
 						</div>
 					</div>
 
-					<div class="form-field form-textarea">
-						<label for="text" class="form-label">
+					<div class="form__field form__textarea">
+						<label for="text" class="form__label">
 							Коментар
 						</label>
 						<textarea name="text" id="text" cols="30" rows="10" class="textarea"
 							placeholder="Введіть текст"></textarea>
 					</div>
-					<label for="box" class="form-label check">
-						<input type="checkbox" name="textarea" id="box" class="form-chekbox">
-						<svg class="check-svg icon">
+					<label for="box" class="form__label-check">
+						<input type="checkbox" name="textarea" id="box" class="form__chekbox">
+						<svg class="form__check-svg icon">
 							<use href="./img/sprite2.svg#icon-check"></use>
 						</svg>
 
 
-						Погоджуюся з розсилкою та приймаю <span class="form-policy"><a href="#">Умови
+						Погоджуюся з розсилкою та приймаю <span class="form__policy"><a class="form__policy-link"
+								href="#">Умови
 								договору</a></span>
 					</label>
-					<button type="submit" class="form-btn">Відправити</button>
+					<button type="submit" class="form__btn">Відправити</button>
 				</div>
 			</form>
 
