--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<!--  Hero -->
 
 		<section class="hero hero__overlay">
-			<div class="hero-wrapper container">
+			<div class="container">
 				<h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
 				<button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
 			</div>
