--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -236,7 +236,7 @@
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__adress">
-                    <a href="./index.html" class="footer__logo link"><span>Web</span>Studio</a>
+                    <a href="./index.html" class="footer__logo link"><span class="footer__span">Web</span>Studio</a>
 
                     <!-- Адрес -->
                     <address>
